fix css - textalign: left

--- a/docroot/sites/all/themes/SBAC/sass/custom.scss
+++ b/docroot/sites/all/themes/SBAC/sass/custom.scss
@@ -414,7 +414,6 @@ html.js {
 	    font-weight: bold;
 	    line-height: 1;
 	    padding: 20px 40px 20px 20px;
-	    text-align: right;
 			color: #0583AC;
 
 			&:hover {
